--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
@@ -29,76 +20,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = load_config(\"configs/train_anyv2_gpu.yaml\")"
+    "config = load_config(\"configs/train_anyv2_wizard.yaml\")\n",
+    "\n",
+    "\n",
+    "BASE_DIR = config[\"base_dir\"]\n",
+    "TRAIN_IMG_DIR = config[\"train_img_dir\"]\n",
+    "TRAIN_DEPTH_DIR = config[\"train_depth_dir\"]\n",
+    "TRAIN_LABEL_DIR =  config[\"train_label_dir\"]\n",
+    "BATCH_SIZE = config[\"batch_size\"]\n",
+    "NUM_WORKERS = config[\"num_workers\"]\n",
+    "LEARNING_RATE = config[\"learning_rate\"]\n",
+    "NUM_EPOCHS = config[\"num_epochs\"]\n",
+    "MODEL_TYPE = config[\"model_type\"]\n",
+    "FUSE_LAYER = config[\"fuse_layer\"]\n",
+    "DATASET_NAME = config[\"dataset_name\"]\n",
+    "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "NUM_CLASSES = 3\n",
+    "\n",
+    "TRAIN_IMG_DIR =  BASE_DIR + TRAIN_IMG_DIR\n",
+    "TRAIN_DEPTH_DIR = BASE_DIR + TRAIN_DEPTH_DIR\n",
+    "TRAIN_LABEL_DIR = BASE_DIR + TRAIN_LABEL_DIR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_img_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/image_splits/train/images',\n",
-       " 'train_depth_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/Depth_anything_v2/train',\n",
-       " 'train_label_dir': '/home/escorpiao/workspace/depth-anything-dataset/data/image_splits/train/labels',\n",
-       " 'batch_size': 16,\n",
-       " 'num_workers': 32,\n",
-       " 'learning_rate': 0.01,\n",
-       " 'num_epochs': 500,\n",
-       " 'device': 'cuda',\n",
-       " 'model_type': 'rgbd',\n",
-       " 'fuse_layer': 15}"
+       "'/home/gkmo/workspace/data/image_splits/train/images'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config"
+    "os.path.join('/home/gkmo/workspace/data', 'image_splits/train/images')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Device cuda\n",
-      "Weights equivalent\n"
+      "{'dataset_name': 'anythingv2', 'base_dir': '/home/gkmo/workspace/data', 'train_img_dir': '/image_splits/train/images', 'train_depth_dir': '/Depth_anything_v2/train/depth', 'train_label_dir': '/image_splits/train/labels', 'batch_size': 32, 'num_workers': 20, 'learning_rate': 0.01, 'num_epochs': 500, 'device': 'cuda', 'model_type': 'rgbd', 'fuse_layer': 15}\n",
+      "Using Device cuda\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/gustavo/workstation/depth_estimation/codes/rgbd-yolov2/.venv/lib/python3.10/site-packages/lightnet/network/module/_lightnet.py:293: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  state = torch.load(weights_file, 'cpu')\n"
+      "/home/gkmo/workspace/rgbd-yolov2/model.py:34: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  rgb_state_dict = torch.load(\"models/rgb_state_dict.pth\")\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'models/rgb_state_dict.pth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 8\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing Device \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDEVICE\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# model = ln.models.YoloV2(NUM_CLASSES)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# model.load('models/5_epochs_split.pt', strict=False)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# model.to(DEVICE)\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodel_builder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mNUM_CLASSES\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mMODEL_TYPE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuse_layer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mFUSE_LAYER\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m model\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels/rgbd_99.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m loss_fn \u001b[38;5;241m=\u001b[39m ln\u001b[38;5;241m.\u001b[39mnetwork\u001b[38;5;241m.\u001b[39mloss\u001b[38;5;241m.\u001b[39mRegionLoss(\n\u001b[1;32m     12\u001b[0m     num_classes\u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mnum_classes,\n\u001b[1;32m     13\u001b[0m     anchors\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39manchors,\n\u001b[1;32m     14\u001b[0m     network_stride\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mstride\n\u001b[1;32m     15\u001b[0m )\n",
+      "File \u001b[0;32m~/workspace/rgbd-yolov2/model.py:34\u001b[0m, in \u001b[0;36mmodel_builder\u001b[0;34m(num_classes, model_type, fuse_layer)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m model_type\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrgbd\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     33\u001b[0m     fusion_model \u001b[38;5;241m=\u001b[39m ln\u001b[38;5;241m.\u001b[39mmodels\u001b[38;5;241m.\u001b[39mYoloFusion(num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, fuse_layer\u001b[38;5;241m=\u001b[39mfuse_layer)\n\u001b[0;32m---> 34\u001b[0m     rgb_state_dict \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodels/rgb_state_dict.pth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m     renamed_rgb_state_dict \u001b[38;5;241m=\u001b[39m rename_state_dict(rgb_state_dict, remap_rgbd_15_fusion_model)\n\u001b[1;32m     36\u001b[0m     fusion_model\u001b[38;5;241m.\u001b[39mload_state_dict(renamed_rgb_state_dict, strict\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "File \u001b[0;32m~/workspace/rgbd-yolov2/.venv/lib/python3.10/site-packages/torch/serialization.py:1319\u001b[0m, in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m pickle_load_args\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m   1317\u001b[0m     pickle_load_args[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1319\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43m_open_file_like\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m opened_file:\n\u001b[1;32m   1320\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _is_zipfile(opened_file):\n\u001b[1;32m   1321\u001b[0m         \u001b[38;5;66;03m# The zipfile reader is going to advance the current file position.\u001b[39;00m\n\u001b[1;32m   1322\u001b[0m         \u001b[38;5;66;03m# If we want to actually tail call to torch.jit.load, we need to\u001b[39;00m\n\u001b[1;32m   1323\u001b[0m         \u001b[38;5;66;03m# reset back to the original position.\u001b[39;00m\n\u001b[1;32m   1324\u001b[0m         orig_position \u001b[38;5;241m=\u001b[39m opened_file\u001b[38;5;241m.\u001b[39mtell()\n",
+      "File \u001b[0;32m~/workspace/rgbd-yolov2/.venv/lib/python3.10/site-packages/torch/serialization.py:659\u001b[0m, in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    657\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_open_file_like\u001b[39m(name_or_buffer, mode):\n\u001b[1;32m    658\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _is_path(name_or_buffer):\n\u001b[0;32m--> 659\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_open_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    660\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    661\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m mode:\n",
+      "File \u001b[0;32m~/workspace/rgbd-yolov2/.venv/lib/python3.10/site-packages/torch/serialization.py:640\u001b[0m, in \u001b[0;36m_open_file.__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    639\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, mode):\n\u001b[0;32m--> 640\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'models/rgb_state_dict.pth'"
      ]
     }
    ],
    "source": [
-    "TEST_IMG_DIR = \"data/data_split/test/images\"\n",
-    "TEST_LABEL_DIR =  \"data/data_split/test/labels\"\n",
-    "TEST_DEPTH_DIR = \"data/data_split/test/depth\"\n",
-    "BATCH_SIZE = 8\n",
-    "NUM_WORKERS = os.cpu_count()\n",
-    "#LEARNING_RATE = 2e-5\n",
-    "NUM_EPOCHS = 5\n",
-    "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "NUM_CLASSES = 3\n",
-    "MODEL_TYPE = \"rgbd\"\n",
-    "FUSE_LAYER = 15\n",
+    "print(config)\n",
     "print(f\"Using Device {DEVICE}\")\n",
     "\n",
     "# model = ln.models.YoloV2(NUM_CLASSES)\n",
@@ -810,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
